@@ -36,6 +36,7 @@ News:
 * New Pythonic interface (See the last example).
 * Several new examples, including Markus Triska's *Sudoku Solver*.
 * Prolog module support.
+* Foreign functions retrieve Python datatypes.
 
 Example (Using Prolog):
 -----------------------
